--- a/src/styles/scafolding.scss
+++ b/src/styles/scafolding.scss
@@ -55,6 +55,12 @@ input[type='radio'].visually-hidden {
 .btn {
   width: 30px;
   height: 30px;
+  padding: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   background-color: transparent;
   box-shadow: none;
   border: none;
@@ -115,4 +121,18 @@ input[type='radio'].visually-hidden {
 .show[data-tooltip]::after {
   opacity: 1; /* Показываем подсказку */
   top: 2em; /* Положение подсказки */
+}
+
+.svg-icon {
+  width: 18px;
+  height: 18px;
+}
+
+.edit-svg__wrapper {
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
