--- a/src/styles/todo-main.scss
+++ b/src/styles/todo-main.scss
@@ -8,6 +8,7 @@
 
 .task-creator__label {
   position: relative;
+  display: flex;
 }
 
 .task-creator__input {
@@ -28,7 +29,7 @@
   }
 }
 
-.task-creator__submit {
+.task-creator__btn {
   position: absolute;
   right: 0;
 
@@ -37,23 +38,15 @@
 
   border: none;
   background-color: transparent;
-  border: 1px solid gray;
   border-bottom: none;
 
-  background-image: url('./../images/svg/add-snap.svg');
-  background-position: center;
-  background-repeat: no-repeat;
+  outline: none;
 
   &:hover {
-    background-image: url('./../images/svg/add-snap--hover.svg');
-    border: 1px solid $akcent;
-    border-bottom: none;
+    --fill-icon: #ec966d;
   }
-
   &:active {
-    background-color: #eccbbd;
-    border: 1px solid $akcent;
-    border-bottom: none;
+    outline: none;
   }
 }
 
