--- a/src/styles/scafolding.scss
+++ b/src/styles/scafolding.scss
@@ -48,8 +48,14 @@ input[type='radio'].visually-hidden {
 }
 
 .container {
-  width: 500px;
+  width: 320px;
   margin: 0 auto;
+}
+
+@media (min-width: 500px) {
+  .container {
+    width: 500px;
+  }
 }
 
 .btn {
