--- a/src/styles/todo-main.scss
+++ b/src/styles/todo-main.scss
@@ -8,11 +8,12 @@
 
 .task-creator__label {
   position: relative;
+  width: 100%;
   display: flex;
 }
 
 .task-creator__input {
-  width: 400px;
+  width: 100%;
   height: 32px;
   padding-left: 10px;
   padding-right: 40px;
@@ -58,7 +59,7 @@
 .task-section__list {
   @include ul-reset;
 
-  width: 400px;
+  width: 100%;
 
   display: flex;
   flex-direction: column;
@@ -115,6 +116,9 @@
 .item-text {
   margin: 0;
   padding: 0;
+
+  font-size: 16px;
+  line-height: 18px;
 
   -moz-user-select: none;
 }
