--- a/src/styles/todo-main.scss
+++ b/src/styles/todo-main.scss
@@ -68,16 +68,17 @@
 .task-section__item {
   position: relative;
   width: 100%;
-  height: 60px;
+  height: 50px;
 
   display: flex;
   align-items: center;
   justify-content: space-between;
 
-  transition: 1s; // ?
+  transition: 0.5s;
 
   &:hover {
     background-color: $hoverBtn;
+    box-shadow: 0px 5px 10px $akcent;
   }
 }
 
@@ -98,7 +99,7 @@
 
 .marker-checkbox {
   position: absolute;
-  top: 21px;
+  top: 16px;
   left: 10px;
   width: 18px;
   height: 18px;
@@ -170,11 +171,15 @@
   padding: 0;
   margin: 0;
   margin-bottom: 5px;
+
+  color: $akcent;
 }
 
 .total-table__total-tasks {
   padding: 0;
   margin: 0;
+
+  color: $akcent;
 }
 
 // modal-input
@@ -184,14 +189,16 @@
   top: 0;
   left: 0;
 
-  width: 400px;
-  height: 60px;
+  width: 100%;
+  height: 50px;
 
   padding-left: 10px;
   padding-right: 40px;
 
   border: none;
   border-bottom: 2px solid $akcent;
+
+  box-shadow: 0px 5px 10px $akcent;
 
   z-index: 100;
 
